Segundo ejemplo de Vue

--- a/VUE/003/003.html
+++ b/VUE/003/003.html
@@ -13,9 +13,12 @@
 
     <div class="con">
 
-        <span>{{ mensaje }}</span>
+        <span>{{ mostrarM() }}</span>
+
+        <p>{{ mensajeD() }}</p>
 
     </div>
+
 
 
     <script src="vue.js"></script>
